# quietcool-ble

./: .gitignore  README.md  pyproject.toml
node-red-contrib-quietcool/: .gitignore  .npmignore  LICENSE  README.md  package.json
node-red-contrib-quietcool/nodes/: quietcool-config.html  quietcool-config.js  quietcool-control.html  quietcool-control.js  quietcool-sensor.html  quietcool-sensor.js
node-red-contrib-quietcool/python/: bridge.py  setup_venv.sh
quietcool_ble/: __init__.py  cli.py  commander.py  explorer.py  fan_api.py  hci_parser.py  monitor.py  prober.py  protocol.py  scanner.py
